feat: Add gallery pages with Instagram updates and mobile optimizations
- Add gallery.html (Polish) and gallery-en.html (English) with before/after transformations
- Add gallery navigation buttons in desktop and mobile headers
- Add gallery-icon.svg for professional mobile navigation icon
- Update Instagram link to new profile: hairestetic.by.iwonawach
- Optimize image loading with preload, fetchpriority, and eager loading
- Add language-aware navigation (back buttons preserve language context)
- Add INSTRUKCJA_GALERII.md with gallery management instructions
- Fix mobile responsiveness across all pages
- Ensure 100% structural consistency between PL and EN gallery versions

--- a/en.html
+++ b/en.html
@@ -1009,11 +1009,11 @@
                 </a>
             </div>
             <div class="header-right">
-                <a href="https://www.instagram.com/hair_estetic.by.iwona?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer" class="nav-button">
+                <a href="https://www.instagram.com/hairestetic.by.iwonawach" target="_blank" rel="noopener noreferrer" class="nav-button">
                     <img src="https://www.hair-estetic.com/instagram-icon.png" alt="Ikona Instagrama" loading="lazy">
                     <span class="nav-button-text">Instagram</span>
                 </a>
-                <a href="#gallery-section" class="nav-button">
+                <a href="gallery-en.html" class="nav-button">
                     <span class="nav-button-text">Gallery</span>
                 </a>
             </div>
@@ -1115,11 +1115,11 @@
                     <img src="https://www.hair-estetic.com/phone-icon.png" alt="Phone icon" loading="lazy">
                     <span class="nav-button-text">Call</span>
                 </a>
-                <a href="https://www.instagram.com/hair_estetic.by.iwona?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer" class="nav-button">
+                <a href="https://www.instagram.com/hairestetic.by.iwonawach" target="_blank" rel="noopener noreferrer" class="nav-button">
                     <img src="https://www.hair-estetic.com/instagram-icon.png" alt="Ikona Instagrama" loading="lazy">
                     <span class="nav-button-text">Instagram</span>
                 </a>
-                <a href="#gallery-section" class="nav-button">
+                <a href="gallery-en.html" class="nav-button">
                     <img src="https://www.hair-estetic.com/gallery-icon.svg" alt="Gallery icon" loading="lazy">
                     <span class="nav-button-text">Gallery</span>
                 </a>
@@ -1197,7 +1197,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#gallery-section" class="cta-button reveal" style="margin-top: 20px;" lang="en">Gallery</a>
+                <a href="gallery-en.html" class="cta-button reveal" style="margin-top: 20px;" lang="en">Gallery</a>
 <p class="gallery-quote reveal" lang="en">Book your unique transformation today.</p>
             </div>
         </section>
