--- a/index.html
+++ b/index.html
@@ -1009,11 +1009,11 @@
                 </a>
             </div>
             <div class="header-right">
-                <a href="https://www.instagram.com/hair_estetic.by.iwona?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer" class="nav-button">
+                <a href="https://www.instagram.com/hairestetic.by.iwonawach" target="_blank" rel="noopener noreferrer" class="nav-button">
                     <img src="https://www.hair-estetic.com/instagram-icon.png" alt="Ikona Instagrama" loading="lazy">
                     <span class="nav-button-text">Instagram</span>
                 </a>
-                <a href="#gallery-section" class="nav-button">
+                <a href="gallery.html" class="nav-button">
                     <span class="nav-button-text">Galeria</span>
                 </a>
             </div>
@@ -1115,11 +1115,11 @@
                     <img src="https://www.hair-estetic.com/phone-icon.png" alt="Ikona telefonu" loading="lazy">
                     <span class="nav-button-text">Zadzwoń</span>
                 </a>
-                <a href="https://www.instagram.com/hair_estetic.by.iwona?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer" class="nav-button">
+                <a href="https://www.instagram.com/hairestetic.by.iwonawach" target="_blank" rel="noopener noreferrer" class="nav-button">
                     <img src="https://www.hair-estetic.com/instagram-icon.png" alt="Ikona Instagrama" loading="lazy">
                     <span class="nav-button-text">Instagram</span>
                 </a>
-                <a href="#gallery-section" class="nav-button">
+                <a href="gallery.html" class="nav-button">
                     <img src="https://www.hair-estetic.com/gallery-icon.svg" alt="Ikona galerii" loading="lazy">
                     <span class="nav-button-text">Galeria</span>
                 </a>
@@ -1197,7 +1197,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#gallery-section" class="cta-button reveal" style="margin-top: 20px;" lang="pl">Galeria</a>
+                <a href="gallery.html" class="cta-button reveal" style="margin-top: 20px;" lang="pl">Galeria</a>
 <p class="gallery-quote reveal" lang="pl">Umów się na swoją wyjątkową metamorfozę już dziś.</p>
             </div>
         </section>
