feat: Add 4 new transformation pairs to gallery (9 total)
- Add images directory with before-6 through before-9 and after-6 through after-9
- Update gallery.html with 4 new transformation entries (6-9)
- Update gallery-en.html with 4 new transformation entries (6-9)
- Fix English comments in gallery-en.html
- Update sitemap.xml with gallery pages and current date (2025-11-22)
- New transformations include:
  * Blonde bob to long hair
  * Long black extensions
  * Medium to extra long blonde
  * Light brown to black

--- a/gallery-en.html
+++ b/gallery-en.html
@@ -860,21 +860,41 @@
             {
                 before: 'images/before-3.jpg',
                 after: 'images/after-3.jpg',
-                format: 'portrait' // Transformation 3: Bob do długich włosów
+                format: 'portrait' // Transformation 3: Bob to long hair
             },
             {
                 before: 'images/before-4.jpg',
                 after: 'images/after-4.jpg',
-                format: 'portrait' // Transformation 4: Przedłużanie z logo Hair Estetic
+                format: 'portrait' // Transformation 4: Extensions with Hair Estetic logo
             },
             {
                 before: 'images/before-5.jpg',
                 after: 'images/after-5.jpg',
-                format: 'portrait' // Transformation 5: Naturalne przedłużenie z logo
+                format: 'portrait' // Transformation 5: Natural extension with logo
+            },
+            {
+                before: 'images/before-6.jpg',
+                after: 'images/after-6.jpg',
+                format: 'portrait' // Transformation 6: Blonde bob to long hair
+            },
+            {
+                before: 'images/before-7.jpg',
+                after: 'images/after-7.jpg',
+                format: 'portrait' // Transformation 7: Long black extensions
+            },
+            {
+                before: 'images/before-8.jpg',
+                after: 'images/after-8.jpg',
+                format: 'portrait' // Transformation 8: Medium to extra long blonde
+            },
+            {
+                before: 'images/before-9.jpg',
+                after: 'images/after-9.jpg',
+                format: 'portrait' // Transformation 9: Light brown to black
             }
         ];
 
-        const ITEMS_PER_PAGE = 5; // Zmniejszona liczba dla lepszej wydajności
+        const ITEMS_PER_PAGE = 5; // Reduced number for better performance
         let currentPage = 1;
         
         // Pagination
