--- a/gallery.html
+++ b/gallery.html
@@ -871,6 +871,26 @@
                 before: 'images/before-5.jpg',
                 after: 'images/after-5.jpg',
                 format: 'portrait' // Transformacja 5: Naturalne przedłużenie z logo
+            },
+            {
+                before: 'images/before-6.jpg',
+                after: 'images/after-6.jpg',
+                format: 'portrait' // Transformacja 6: Blond bob do długich włosów
+            },
+            {
+                before: 'images/before-7.jpg',
+                after: 'images/after-7.jpg',
+                format: 'portrait' // Transformacja 7: Długie czarne przedłużenie
+            },
+            {
+                before: 'images/before-8.jpg',
+                after: 'images/after-8.jpg',
+                format: 'portrait' // Transformacja 8: Średnie do ekstra długich blond
+            },
+            {
+                before: 'images/before-9.jpg',
+                after: 'images/after-9.jpg',
+                format: 'portrait' // Transformacja 9: Jasnobrązowe do czarnych
             }
         ];
 
