--- a/gallery-en.html
+++ b/gallery-en.html
@@ -850,51 +850,26 @@
             {
                 before: 'images/before-1.jpg',
                 after: 'images/after-1.jpg',
-                format: 'portrait' // Transformation 1: Hair extension
+                format: 'portrait' // Transformation 1: Blonde bob to long hair
             },
             {
                 before: 'images/before-2.jpg',
                 after: 'images/after-2.jpg',
-                format: 'portrait' // Transformation 2: Extension and smoothing
+                format: 'portrait' // Transformation 2: Long black extensions
             },
             {
                 before: 'images/before-3.jpg',
                 after: 'images/after-3.jpg',
-                format: 'portrait' // Transformation 3: Bob to long hair
+                format: 'portrait' // Transformation 3: Medium to extra long blonde
             },
             {
                 before: 'images/before-4.jpg',
                 after: 'images/after-4.jpg',
-                format: 'portrait' // Transformation 4: Extensions with Hair Estetic logo
-            },
-            {
-                before: 'images/before-5.jpg',
-                after: 'images/after-5.jpg',
-                format: 'portrait' // Transformation 5: Natural extension with logo
-            },
-            {
-                before: 'images/before-6.jpg',
-                after: 'images/after-6.jpg',
-                format: 'portrait' // Transformation 6: Blonde bob to long hair
-            },
-            {
-                before: 'images/before-7.jpg',
-                after: 'images/after-7.jpg',
-                format: 'portrait' // Transformation 7: Long black extensions
-            },
-            {
-                before: 'images/before-8.jpg',
-                after: 'images/after-8.jpg',
-                format: 'portrait' // Transformation 8: Medium to extra long blonde
-            },
-            {
-                before: 'images/before-9.jpg',
-                after: 'images/after-9.jpg',
-                format: 'portrait' // Transformation 9: Light brown to black
+                format: 'portrait' // Transformation 4: Light brown to black
             }
         ];
 
-        const ITEMS_PER_PAGE = 5; // Reduced number for better performance
+        const ITEMS_PER_PAGE = 4; // All transformations on one page
         let currentPage = 1;
         
         // Pagination
