--- a/gallery.html
+++ b/gallery.html
@@ -850,51 +850,26 @@
             {
                 before: 'images/before-1.jpg',
                 after: 'images/after-1.jpg',
-                format: 'portrait' // Transformacja 1: Przedłużanie włosów
+                format: 'portrait' // Transformacja 1: Blond bob do długich włosów
             },
             {
                 before: 'images/before-2.jpg',
                 after: 'images/after-2.jpg',
-                format: 'portrait' // Transformacja 2: Przedłużanie i wygładzenie
+                format: 'portrait' // Transformacja 2: Długie czarne przedłużenie
             },
             {
                 before: 'images/before-3.jpg',
                 after: 'images/after-3.jpg',
-                format: 'portrait' // Transformacja 3: Bob do długich włosów
+                format: 'portrait' // Transformacja 3: Średnie do ekstra długich blond
             },
             {
                 before: 'images/before-4.jpg',
                 after: 'images/after-4.jpg',
-                format: 'portrait' // Transformacja 4: Przedłużanie z logo Hair Estetic
-            },
-            {
-                before: 'images/before-5.jpg',
-                after: 'images/after-5.jpg',
-                format: 'portrait' // Transformacja 5: Naturalne przedłużenie z logo
-            },
-            {
-                before: 'images/before-6.jpg',
-                after: 'images/after-6.jpg',
-                format: 'portrait' // Transformacja 6: Blond bob do długich włosów
-            },
-            {
-                before: 'images/before-7.jpg',
-                after: 'images/after-7.jpg',
-                format: 'portrait' // Transformacja 7: Długie czarne przedłużenie
-            },
-            {
-                before: 'images/before-8.jpg',
-                after: 'images/after-8.jpg',
-                format: 'portrait' // Transformacja 8: Średnie do ekstra długich blond
-            },
-            {
-                before: 'images/before-9.jpg',
-                after: 'images/after-9.jpg',
-                format: 'portrait' // Transformacja 9: Jasnobrązowe do czarnych
+                format: 'portrait' // Transformacja 4: Jasnobrązowe do czarnych
             }
         ];
 
-        const ITEMS_PER_PAGE = 5; // Zmniejszona liczba dla lepszej wydajności
+        const ITEMS_PER_PAGE = 4; // Wszystkie transformacje na jednej stronie
         let currentPage = 1;
         
         // Pagination
