feat: Add 5th transformation pair and fix 4th pair
- Replace before-4/after-4 with correct photos (medium black to very long)
- Add before-5/after-5 (long brown to extra long blonde ombré)
- Update gallery.html with 5 transformations
- Update gallery-en.html with 5 transformations
- Change ITEMS_PER_PAGE to 5
- Gallery now displays all 5 real transformation photos

--- a/gallery-en.html
+++ b/gallery-en.html
@@ -865,11 +865,16 @@
             {
                 before: 'images/before-4.jpg',
                 after: 'images/after-4.jpg',
-                format: 'portrait' // Transformation 4: Light brown to black
+                format: 'portrait' // Transformation 4: Medium black to very long
+            },
+            {
+                before: 'images/before-5.jpg',
+                after: 'images/after-5.jpg',
+                format: 'portrait' // Transformation 5: Long brown to extra long blonde ombré
             }
         ];
 
-        const ITEMS_PER_PAGE = 4; // All transformations on one page
+        const ITEMS_PER_PAGE = 5; // All transformations on one page
         let currentPage = 1;
         
         // Pagination
