--- a/gallery.html
+++ b/gallery.html
@@ -865,11 +865,16 @@
             {
                 before: 'images/before-4.jpg',
                 after: 'images/after-4.jpg',
-                format: 'portrait' // Transformacja 4: Jasnobrązowe do czarnych
+                format: 'portrait' // Transformacja 4: Średnie czarne do bardzo długich
+            },
+            {
+                before: 'images/before-5.jpg',
+                after: 'images/after-5.jpg',
+                format: 'portrait' // Transformacja 5: Długie brąz do ekstra długich blond ombré
             }
         ];
 
-        const ITEMS_PER_PAGE = 4; // Wszystkie transformacje na jednej stronie
+        const ITEMS_PER_PAGE = 5; // Wszystkie transformacje na jednej stronie
         let currentPage = 1;
         
         // Pagination
